--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contact Us</title>
+  <title>AR Technology</title>
   <link rel="stylesheet" href="dashboard.css" />
   <link rel="stylesheet" href="contact.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
@@ -13,12 +14,11 @@
     <nav class="navbar">
       <div class="merge">
         <div class="logo">AR Technology</div>
-        <div class="quote">Design Develop Deliver</div>
       </div>
       <ul class="nav-links">
         <li><a href="dashboard.html" onclick="showSection('home')">Home</a></li>
-        <li><a href="#services" onclick="showSection('services')">Services</a></li>
-        <li><a href="#about" onclick="showSection('about')">About us</a></li>
+        <li><a href="dashboard.html#services" onclick="showSection('services')">Services</a></li>
+        <li><a href="dashboard.html#about" onclick="showSection('about')">About us</a></li>
         <li><a href="#contact" onclick="showSection('contact')" class="active">Contact us</a></li>
       </ul>
     </nav>
@@ -50,15 +50,15 @@
     <div class="footer-container">
       <div class="footer-logo">
         <h2>AR Technology</h2>
-        <p class="social-icons">
-          <a href="#"><span>f</span></a>
-          <a href="#"><span>i</span></a>
-          <a href="#"><span>in</span></a>
-          <a href="mailto:artechnologi18@gmail.com">@</a>
-          <a href="tel:+919361578086">91+ 9361578086</a>
-
-        </p<>
+        <div class="social-icons">
+          <a href="#" class="social-btn"><i class="fab fa-facebook-f"></i></a>
+          <a href="#" class="social-btn"><i class="fab fa-instagram"></i></a>
+          <a href="#" class="social-btn"><i class="fab fa-linkedin-in"></i></a>
+          <a href="mailto:artechnologi18@gmail.com" class="social-btn"><i class="fas fa-envelope"></i></a>
+          <a href="tel:+918870214161" class="social-btn"><i class="fab fa-whatsapp"></i></a>
+        </div>
       </div>
+      
   </footer>
 
   <script src="dashboard.js"></script>
