--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>AR Technology</title>
-  <link rel="stylesheet" href="dashboard.css" />
+  <link rel="stylesheet" href="index.css" />
   <link rel="stylesheet" href="contact.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -16,9 +16,9 @@
         <div class="logo">AR Technology</div>
       </div>
       <ul class="nav-links">
-        <li><a href="dashboard.html" onclick="showSection('home')">Home</a></li>
-        <li><a href="dashboard.html#services" onclick="showSection('services')">Services</a></li>
-        <li><a href="dashboard.html#about" onclick="showSection('about')">About us</a></li>
+        <li><a href="index.html" onclick="showSection('home')">Home</a></li>
+        <li><a href="index.html#services" onclick="showSection('services')">Services</a></li>
+        <li><a href="index.html#about" onclick="showSection('about')">About us</a></li>
         <li><a href="#contact" onclick="showSection('contact')" class="active">Contact us</a></li>
       </ul>
     </nav>
@@ -61,7 +61,7 @@
       
   </footer>
 
-  <script src="dashboard.js"></script>
+  <script src="index.js"></script>
   <script src="contact.js"></script>
 </body>
 </html>
