--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>AR Technology</title>
-  <link rel="stylesheet" href="dashboard.css" />
+  <link rel="stylesheet" href="index.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 </head>
@@ -120,6 +120,6 @@
 
   </footer>
   
-  <script src="dashboard.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
