--- a/dashboard.html
+++ b/dashboard.html
@@ -21,8 +21,9 @@
         <li><a href="#services" onclick="showSection('services')">Services</a></li>
         <li><a href="#about" onclick="showSection('about')">About us</a></li>
         <li><a href="contact.html" onclick="showSection('contact')">Contact us</a></li>
+        <li><a href="Donate.html" onclick="showSection('donate')">Donate</a></li>
         
-      </ul>
+      </a<>
     </div>
   </header>
 
